--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -8592,11 +8592,49 @@ Please read the description of the Server Mode (linked below) to understand the 
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="FontDedicationQCAD">
+          <object class="GtkHBox" id="hbox8">
             <property name="visible">True</property>
-            <property name="xalign">0</property>
-            <property name="label" translatable="yes">Thanks to the &lt;a href="http://qcad.org"&gt;QCAD developers&lt;/a&gt; for these single-line fonts!</property>
-            <property name="use_markup">True</property>
+            <child>
+              <object class="GtkLabel" id="FontDedicationQCAD">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">Thanks to the</property>
+                <property name="use_markup">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLinkButton" id="QCADLink">
+                <property name="label" translatable="yes">QCAD developers</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="has_tooltip">True</property>
+                <property name="relief">none</property>
+                <property name="uri">http://qcad.org</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="FontDedicationQCADSuffix">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">for these single-line fonts!</property>
+                <property name="use_markup">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
