added "merge regardless of direction" to "Revise directions" operation
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1019 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -8150,7 +8150,7 @@ Any selected group of dimensions will be scaled accordingly.</property>
     <property name="step_increment">1</property>
   </object>
   <object class="GtkAction" id="OpenRecentModel">
-    <property name="label">Open _Recent Model</property>
+    <property name="label">Open _Recent</property>
     <property name="stock_id">gtk-open</property>
     <property name="always_show_image">True</property>
   </object>
